

                              KijiSchema Release Notes

Version 1.4.0
  * SCHEMA-672. DecodedCell and KijiCell now support getting the reader Schema
      with which the cell was decoded (if any). Decoded cell adds a constructor
      which accepts a writer schema, reader schema, and value.
  * SCHEMA-648. Adds support for CDH5 and HBase 96 and updates platform bridge
      API to be compatible. Due to the remove of client-exposed row locks,
      deleteMapFamily will no longer hold a lock while deleting qualifiers.

Version 1.3.7
  * SCHEMA-663. KijiTablePool now properly sets the retain count when spawning
      tables to reach the minimum size.
  * SCHEMA-656. Resources which should be closed before JVM shutdown may now
      be registered with DebugResourceTracker, which will log errors for all
      unclosed resources when the JVM shuts down.
  * SCHEMA-651. cleanup deleted instances from zookeeper in
      /kiji-schema/instances.
  * SCHEMA-491. Share/reuse Zookeeper connections instances when possible.
  * SCHEMA-650. The KijiTableReaderPool now retains the KijiTable associated with
      its KijiReaderFactory. Closing the pool will release the table.

Version 1.3.5
  * SCHEMA-627. The schema table tool now permits listing all schemas and
      output to StdOut.

Version 1.3.4
  * SCHEMA-604. Adds support for MapR's distribution of HBase.
  * SCHEMA-557. Removes HTablePool usage.
  * SCHEMA-605. Fixes compatibility with the latest 1.X Hadoop and 0.94.X
      HBase releases.

Version 1.3.3
  * SCHEMA-584. KijiTableAnnotator now supports storing string key-value
      annotations on tables and columns.

Version 1.3.2
  * SCHEMA-586. KijiTableReaderPool now supports managing a pool of open
      KijiTableReaders for thread safe concurrent reads.

Version 1.3.1
  * SCHEMA-544. Introduce new layout version 1.4 with PROTOBUF cell encoding.
  * SCHEMA-574. Fixed broken validation logic from Avro.